# GlassBeaker

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/desktop/: index.html  package.json
apps/isaac/: pyproject.toml
apps/python/: app.py  package.json  pyproject.toml
apps/python/agents/: deepagent.py  pydantic.py
apps/python/agents/chat/: model.py
apps/python/api/: chinatsu.py  genie_sim.py  ros.py
apps/python/api/nanami/: events.py  export.py  preview.py  robot.py  session.py  state.py
apps/python/api/zapdos/: sessions.py  {session}.py
apps/python/api/zapdos/{session}/: asset.py  call.py  {action}.py
apps/python/nanami/: config.py  github_cache.py  manager.py  models.py  runtime.py  session.py  stl_obj.py  urdf.py  worker.py
apps/python/scripts/: convert_usd.py
apps/python/tests/: test_mount.py  test_nanami.py  test_nanami_cache.py  test_nanami_manager.py
apps/python/utils/: module.py  mount.py  mujoco_tools.py  ros.py  ros_bridge.py  session.py  sim_env.py  usd_frames.py  usd_to_mjcf.py
apps/ros/: app.py  pixi.toml  protocol.py
apps/web/: .env.example  babel-standalone.d.ts  glassbeaker.d.ts  next.config.ts  package.json  todo.md  tsconfig.json
skills/nijika-exe/: SKILL.md
tasks/: 00-init.md  01-copilotkit.md  02-add-python.md  03-add-sandpack.md  05-remove-pi-chatpanel.md  06-pi-tool-interactioni.md  08-refactor-nanami.md  09-nijika-train.md  10-add-genie-sim.md  11-nijika-train.md  12-genie-sim-mitsuba.md  13-add-r1-genie-sim.md  14-render-genie-sim.md
(+87 files in other folders)
