[project]
name = "glassbeaker-python"
version = "0.1.0"
description = "Python backend for the GlassBeaker desktop shell."
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn>=0.34,<1.0",
  "torch==2.9.1",
  "torchvision==0.24.1",
  "numpy>=1.24.0",
  "matplotlib>=3.6.0",
  "scikit-rf>=0.30.0",
  "ag-ui-langgraph>=0.0.30",
  "copilotkit>=0.1.85",
  "deepagents>=0.5.1",
  "langchain-openai>=1.1.12",
  "pydantic-ai-slim[ag-ui]>=1.78.0",
  "mujoco>=3.7.0",
  "python-multipart>=0.0.26",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126" }
]
torchvision = [
  { index = "pytorch-cu126" }
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu126"
name = "pytorch-cu126"
